translation-tool/inputs/source_meta/objects/HSvc_NEM_CaseServiceAttributeValue__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Customer_Product_Attribute_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Attribute</label>
        <referenceTo>HSvc_NEM_ServiceAttribute__c</referenceTo>
        <relationshipLabel>Case Service Attribute Values</relationshipLabel>
        <relationshipName>Case_Service_Attribute_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Case Service Attribute Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSAV-{00000}</displayFormat>
        <label>Case Service Attribute Value ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Service Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>